internal/session/app/tests/snapshots/mcp_schema_snapshot_test__mcp_tool@mail_send.snap
---
source: internal/session/app/tests/mcp_schema_snapshot_test.rs
expression: tool
---
{
  "description": "Send durable mail to sessions selected by selector.",
  "inputSchema": {
    "additionalProperties": false,
    "properties": {
      "content": {
        "description": "Message content.",
        "type": "string"
      },
      "context_id": {
        "description": "Conversation correlation tag.",
        "type": "string"
      },
      "idempotency_key": {
        "description": "Optional client idempotency key scoped to the derived sender.",
        "type": "string"
      },
      "intent": {
        "description": "Message intent tag. Receipt is reserved for daemon system messages.",
        "enum": [
          "request",
          "result",
          "inform"
        ],
        "type": "string"
      },
      "notify": {
        "description": "Optional wake mode to request after mail persistence.",
        "enum": [
          "wait",
          "steer"
        ],
        "type": "string"
      },
      "to": {
        "description": "Recipient selector used for matching sessions.\n\nGrammar:\n  all\n  <uuid>\n  id:<uuid>\n  role:<name>\n  namespace:<slug>\n  dir:<path>\n  label:<key>=<value>\n  label:<key> in (v1, v2)\nExamples:\n  all\n  019e44f9-...\n  role:engineer\n  namespace:default\n  dir:/tmp/project\n  label:app=nginx\n  \"label:app in (web, api)\"",
        "type": "string"
      }
    },
    "required": [
      "to",
      "content",
      "context_id",
      "intent"
    ],
    "type": "object"
  },
  "name": "mail_send",
  "outputSchema": {
    "properties": {
      "errors": {
        "items": {
          "type": "object"
        },
        "type": "array"
      },
      "results": {
        "items": {
          "type": "object"
        },
        "type": "array"
      }
    },
    "required": [
      "results"
    ],
    "type": "object"
  }
}
