internal/session/app/tests/snapshots/mcp_schema_snapshot_test__mcp_tool@session_capture.snap
---
source: internal/session/app/tests/mcp_schema_snapshot_test.rs
expression: tool
---
{
  "description": "Capture tmux pane scrollback for one selected session.",
  "inputSchema": {
    "additionalProperties": false,
    "properties": {
      "all_namespaces": {
        "description": "Bypass namespace scoping and match across all namespaces.",
        "type": "boolean"
      },
      "id": {
        "description": "Exact session id to capture.",
        "format": "uuid",
        "type": "string"
      },
      "namespace": {
        "description": "Namespace slug to scope this tool. Overrides the caller session namespace fallback.",
        "type": "string"
      },
      "scrollback_lines": {
        "description": "Maximum tmux scrollback lines to include. When omitted, runtime-matters uses its default capture depth.",
        "type": "integer"
      }
    },
    "required": [
      "id"
    ],
    "type": "object"
  },
  "name": "session_capture",
  "outputSchema": {
    "properties": {
      "capture": {
        "properties": {
          "payload": {
            "type": "object"
          },
          "status": {
            "enum": [
              "captured",
              "failed"
            ],
            "type": "string"
          }
        },
        "required": [
          "status"
        ],
        "type": "object"
      },
      "session": {
        "type": "object"
      }
    },
    "required": [
      "session",
      "capture"
    ],
    "type": "object"
  }
}
