internal/session/app/tests/snapshots/mcp_schema_snapshot_test__mcp_tool@session_get.snap
---
source: internal/session/app/tests/mcp_schema_snapshot_test.rs
expression: tool
---
{
  "description": "Get one session record by id. The tool returns an error envelope when the id is unknown.",
  "inputSchema": {
    "additionalProperties": false,
    "properties": {
      "all_namespaces": {
        "description": "Bypass namespace scoping and match across all namespaces.",
        "type": "boolean"
      },
      "id": {
        "description": "Session id to load.",
        "type": "string"
      },
      "namespace": {
        "description": "Namespace slug to scope this tool. Overrides the caller session namespace fallback.",
        "type": "string"
      }
    },
    "required": [
      "id"
    ],
    "type": "object"
  },
  "name": "session_get",
  "outputSchema": {
    "properties": {
      "session": {
        "properties": {
          "agent_config": {
            "type": [
              "string",
              "null"
            ]
          },
          "created_at": {
            "format": "date-time",
            "type": "string"
          },
          "exit_code": {
            "type": [
              "integer",
              "null"
            ]
          },
          "id": {
            "format": "uuid",
            "type": "string"
          },
          "labels": {
            "items": {
              "properties": {
                "key": {
                  "type": "string"
                },
                "value": {
                  "type": "string"
                }
              },
              "required": [
                "key",
                "value"
              ],
              "type": "object"
            },
            "type": "array"
          },
          "role": {
            "type": "string"
          },
          "runtime": {
            "enum": [
              "claude",
              "codex"
            ],
            "type": "string"
          },
          "runtime_pid": {
            "type": "integer"
          },
          "runtime_session": {
            "type": [
              "string",
              "null"
            ]
          },
          "started_at": {
            "format": "date-time",
            "type": "string"
          },
          "state": {
            "enum": [
              "SPAWNING",
              "RUNNING",
              "TERMINATED",
              "LOST"
            ],
            "type": "string"
          },
          "terminated_at": {
            "format": "date-time",
            "type": [
              "string",
              "null"
            ]
          },
          "tmux_pane": {
            "type": [
              "string",
              "null"
            ]
          },
          "transcript_path": {
            "type": [
              "string",
              "null"
            ]
          },
          "updated_at": {
            "format": "date-time",
            "type": "string"
          },
          "workspace": {
            "type": "string"
          }
        },
        "required": [
          "id",
          "runtime",
          "role",
          "workspace",
          "state",
          "runtime_pid",
          "created_at",
          "started_at",
          "updated_at"
        ],
        "type": "object"
      }
    },
    "required": [
      "session"
    ],
    "type": "object"
  }
}
